Resolve merge conflict in ghostty config

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,6 +1,7 @@
 # Theme
 theme = "tokyonight"
-background-opacity = 0.9
+background-opacity = 0.75
+# background-opacity = 1
 
 # Font
 font-family = "JetBrains Mono Nerd Font"
