kitty config update

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,28 +1,36 @@
-font_family      JetbrainsMono NF
+# font_family      JetbrainsMono NF
+font_family      Jetbrains Nerd Font Mono
+# font_family      GeistMono Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 13.0
-window_padding_width 0
-background_opacity 0.75
+font_size 14
+
+disble_ligatures no
+enable_audio_bell no
+
 hide_window_decorations false
-confirm_os_window_close 0
 
-cursor_shape beam
+url_style curly
 
-# remember_window_size  yes
-# initial_window_width 720
-# initial_window_height 330
+cursor_shape block
+cursor_blink_interval 0
+
+remember_window_size  no
+initial_window_width 640
+initial_window_height 480
+window_padding_width 20
+
+background_opacity 0.80
+scrollbar_handle_opacity 0
+scrollbar_track_opacity 0
+scrollbar_track_hover_opacity 0
+confirm_window_close 0
+
+sync_to_monitor no
 
 map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
-
-# background_image /home/ssk/Wallpaper-Bank/koyi.png
-
-# Launch tmux no startup
-# shell tmux
-
-
 
 include themes/tokyonight.conf
