feat: update terminal and keybindings configs
- change default terminal to foot
- adjust kitty font size and confirm setting
- update emoji keybinding to use noctalia-shell launcher

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,7 +5,7 @@ bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 14
+font_size 13
 
 disble_ligatures no
 enable_audio_bell no
@@ -26,7 +26,7 @@ background_opacity 0.80
 scrollbar_handle_opacity 0
 scrollbar_track_opacity 0
 scrollbar_track_hover_opacity 0
-confirm_window_close 0
+confirm_os_window_close 0
 
 sync_to_monitor no
 
