feat: enhance hyprland configuration
- add column layout keybindings for scrolling and management

- add emoji launcher keybinding

- configure HDMI-A-1 output source

- adjust eDP-1 scale to 1.2 and assign workspaces

- reduce border size to 2

- switch default terminal to kitty

- increase kitty background opacity to 0.90

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -12,6 +12,7 @@ source = ~/.config/hypr/hyprland/input/touchpad.conf
 
 # Output settings
 source = ~/.config/hypr/hyprland/outputs/eDP-1.conf
+source = ~/.config/hypr/hyprland/outputs/HDMI-A-1.conf
 
 # Keybindings
 source = ~/.config/hypr/hyprland/keybindings/apps.conf
