--- a/.config/hypr/hyprland/keybindings/hyprscrolling.conf
+++ b/.config/hypr/hyprland/keybindings/hyprscrolling.conf
@@ -1,4 +1,21 @@
+# move the view by columns
+bind = SUPER SHIFT, slash, layoutmsg, move +col
+bind = SUPER SHIFT, period, layoutmsg, move -col
+
+# move the view between columns
 bind = SUPER SHIFT, l, layoutmsg, movewindowto r
 bind = SUPER SHIFT, h, layoutmsg, movewindowto l
 bind = SUPER SHIFT, k, layoutmsg, movewindowto u
 bind = SUPER SHIFT, j, layoutmsg, movewindowto d
+
+# resize the current column
+bind = SUPER, equal,  layoutmsg, colresize +0.1
+bind = SUPER, minus,  layoutmsg, colresize -0.1
+bind = SUPER, c,  layoutmsg, colresize +conf  # cycle to next preset width
+bind = SUPER, x,  layoutmsg, colresize -conf  # cycle backward
+
+# column management
+bind = SUPER, p, layoutmsg, promote  # put focused window in a new column
+bind = SUPER, f, layoutmsg, togglefit  # toggle center vs fit
+bind = SUPER, s, layoutmsg, swapcol r  # swap this column to the right
+bind = SUPER, a, layoutmsg, swapcol l  # swap to the left
