--- a/.config/hypr/hyprland/keybindings/basics.conf
+++ b/.config/hypr/hyprland/keybindings/basics.conf
@@ -23,4 +23,4 @@ bind = ctrl, F12, exec, hyprshot -m region -o $HOME/Pictures/Screenshots/
 # Noctalia keybindings
 bind = $mainMod SHIFT, B, exec, qs -c noctalia-shell ipc call bar toggle
 bind = $mainMod, P, exec, qs -c noctalia-shell ipc call sessionMenu toggle
-
+bind = $mainMod, comma, exec, qs -c noctalia-shell ipc call launcher emoji
