--- a/.config/hypr/hyprland/outputs/eDP-1.conf
+++ b/.config/hypr/hyprland/outputs/eDP-1.conf
@@ -1,1 +1,9 @@
-monitor = eDP-1,preferred,auto,1
+monitor = eDP-1,preferred,auto,1.2
+
+# Assign workspaces to the internal monitor
+workspace = 1,monitor:eDP-1
+workspace = 4,monitor:eDP-1
+workspace = 5,monitor:eDP-1
+workspace = 6,monitor:eDP-1
+workspace = 7,monitor:eDP-1
+workspace = 8,monitor:eDP-1
