chore: update hyprland, kitty, and tofi configs
- adjust monitor scale from 1.2 to 1 in hyprland outputs
- enable hyprpm reload on startup
- switch menu from rofi to tofi-drun
- increase kitty font size to 14 and opacity to 0.90
- add new tofi config file

--- a/.config/hypr/hyprland/variables.conf
+++ b/.config/hypr/hyprland/variables.conf
@@ -1,7 +1,8 @@
 $terminal = kitty
 $fileManager = nautilus
 $browser = brave
-$menu = rofi -show drun
+# $menu = rofi -show drun
+$menu = tofi-drun -c ~/.config/tofi/config --drun-launch=true
 $mainMod = super
 
 env = XCURSOR_THEME,"Bibata-Modern-Ice"
