--- a/.config/hypr/hyprland/startup/launch-apps.conf
+++ b/.config/hypr/hyprland/startup/launch-apps.conf
@@ -4,7 +4,7 @@ exec-once = hypridle
 exec-once = hyprpaper &
 exec-once = waypaper --restore
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Modern-Ice"
-# exec-once = hyprpm reload -n
+exec-once = hyprpm reload -n
 
 # Change wallpaper every 5 minutes
 # exec-once = bash -c 'while true; do ~/.config/hyprland/hyprland/scripts/random-wallpaper.sh; sleep 300; done' &
