style: switch to tokyonight theme and update configs
- update color schemes in i3, polybar, wezterm
- change fonts and terminal settings in i3, kitty
- add markdown preview keymap in nvim
- add powermenu extension for rofi with lock option
- update sway menu launcher to tofi and disable tap drag lock
- add welcome message in zshrc
- remove old wallpapers and backup files

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -68,7 +68,7 @@ opacity-rule = [ "94:class_g = 'Geany'"];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 10
+corner-radius = 0;
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
