--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -11,25 +11,15 @@
 ;==========================================================
 [colors]
 ; TokyoNight color palette
-# background =     #0d0f20    
-# background-alt = #1b1e34 
-# foreground =     #e6ebef
-# primary =        #5294e2     
-# secondary =      #ff4dff    
-# alert =          #ff6161         
-# disabled =       #4e505c       
-# label =          #ffc600            
-transparent =      #00000000   
-;
-; Nord color palette
-background =       #2e3440
-background-alt =   #3b4252
-foreground     =   #d8dee9
-primary =          #81a1c1
-secondary=         #b48ead
-alert =            #bf616a
-disabled =         #d8dee9
-label=             #ebcb8b
+background =     #1a1b26    
+background-alt = #414868
+foreground =     #fff
+primary =        #7aa2f7     
+secondary =      #bb9af7    
+alert =          #f7768e         
+disabled =       #414868       
+label =          #c0caf5            
+transparent =    #00000000   
 
 [bar/top]
 monitor = ${env:MONITOR:}
