--- a/.config/i3/config
+++ b/.config/i3/config
@@ -2,8 +2,8 @@
 
  for_window [class="^.*"] border pixel 3
 
-# exec_always --no-startup-id feh --bg-scale ~/.config/i3/walls/tokyonight.png
-# set mod key (Mod1=<Alt>, Mod4=<Super>)
+ exec_always --no-startup-id feh --bg-scale /home/ssk/Wallpaper-Bank/sunrise.png
+ # set mod key (Mod1=<Alt>, Mod4=<Super>)
 set $mod Mod4
 
 
@@ -13,7 +13,6 @@ exec --no-startup-id xrdb -merge ~/.Xresources
 #exec_always --no-startup-id setxkbmap -option :nocaps
 exec_always --no-startup-id setxkbmap -option 
 exec --no-startup-id variety --restore
-exec --no-startup-id waypaper --restore
 exec_always --no-startup-id autotiling
 # exec_always --no-startup-id xborders
 
@@ -23,7 +22,7 @@ exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:JetbrainsMono Nerd Font Bold 12
+font pango:Jetbrains Nerd Font  Mono 12
 
 # Gaps
 gaps outer 2
@@ -59,7 +58,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec ghostty
+bindsym $mod+Return exec kitty
 
 # Send the terminal to the scratchpad
 bindsym $mod+Shift+Return move scratchpad
@@ -227,16 +226,10 @@ bindsym $mod+c exec "~/.config/i3/lockscreen.sh"
 # finds out, if available)
 
 # Tokyo Night color scheme
-# set $color1 #0d0f20  
-# set $color2 #5294e2 
-# set $color3 #4e505c
-# set $color4 #ff6161
-
-# Nord color scheme
-set $color1 #2e3440
-set $color2 #81a1c1 
-set $color3 #3b4252  
-set $color4 #bf616a
+set $color1 #1a1b26  
+set $color2 #7aa2f7 
+set $color3 #414559
+set $color4 #f7768e
 
 client.focused               $color2 $color2 $color1 $color2 $color2
 client.unfocused             $color3 $color1 $color2 $color1 $color1
