feat: add git profile switcher script - update kitty config to hide window decorations

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -9,7 +9,7 @@ font_size 14
 disble_ligatures no
 enable_audio_bell no
 
-hide_window_decorations false
+hide_window_decorations true
 
 url_style curly
 
