--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -21,12 +21,12 @@ save_to_clipboard = true
 [window]
 decorations = "none"
 dynamic_title = true
-opacity = 1
+opacity = 0.90
 dynamic_padding = true
 
-# [window.padding]
-# x = 25
-# y = 25
+[window.padding]
+x = 25
+y = 25
 
 [scrolling]
 history = 10000
