--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,10 +1,10 @@
-font_family      Jetbrains Nerd Font Mono
-# font_family      GeistMono Nerd Font Mono
+# font_family      Jetbrains Nerd Font Mono
+font_family      GeistMono Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
-font_size 14
+font_size 13
 
 disble_ligatures no
 enable_audio_bell no
