refactor(tmux): reorganize config with sections, update plugins, and enhance theming

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,96 +4,152 @@
 # |____|__|__|__|_____|__.__|
 #
 
-# Color
-set -g default-terminal "screen-256color"
+# ================================================================
+# GENERAL SETTINGS
+# ================================================================
 
-# Plugins 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'omerxx/tmux-sessionx'
-set -g @plugin 'omerxx/tmux-floax'
+#  Terminal colors
+set -s default-terminal "tmux-256color"
+set -as terminal-features ",xterm*:RGB"
+set -ga terminal-overrides ",*256col*:Tc"
 
-# TokyoNight Theme
-set -g @plugin 'nikolovlazar/tokyo-night-tmux'
-set -g status-left "#S "  
-set -g status-justify left  
-set -g @tokyo-night-tmux_window_id_style fsquare
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_zoom_id_style dsquare
+# Passthrough for yazi images
+set -g allow-passthrough on
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
-# Plugin settings
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+# Mouse support
+set -g mouse on
+
+# Scrollback buffer
+set -g history-limit 150000
+
+# Vim mode
+set-window-option -g mode-keys vi
+
+# Terminal titles
+set -g set-titles on
+set -g set-titles-string "#W"
+
+# ================================================================
+# PREFIX KEY
+# ================================================================
 
 set -g prefix `
 unbind C-b
 bind-key ` send-prefix
 
-# key bindings for plugins
-set -g @sessionx-bind 'space'
-set -g @floax-bind '-n M-t'
+# ================================================================
+# TOKYONIGHT COLORS
+# ================================================================
 
+BG="#1a1b26"
+FG="#c0caf5"
+BLUE="#7aa2f7"
+CYAN="#7dcfff"
+GREEN="#9ece6a"
+MAGENTA="#bb9af7"
+RED="#f7768e"
+YELLOW="#e0af68"
+GRAY="#414868"
+COMMENT="#565f89"
 
-# Undercurl
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
-
-# Toggle tmux status bar
-bind '\' set status
-if-shell "[[ $(tmux lsw | wc -l) -le 1 ]]" 'set -g status'
-
-
-# Position tmux status bar at top of screen
-set-option -g status-position top
-
-bind -r m resize-pane -Z
+# ================================================================
+# STATUS BAR - MINIMAL
+# ================================================================
 
 set -g status on
+set -g status-position top
+set -g status-interval 1
+set -g status-justify left
+set -g status-style "fg=$FG bg=default"
 
-# Enable mouse
-set -g mouse on
+# Right side - minimal indicators
+set -g status-right-length 100
+set -g status-right "#[fg=$COMMENT]#{?client_prefix,#[fg=$RED bold] ⌨,}#[fg=$MAGENTA,bold] #S"
 
-# Increase history limit
-set -g history-limit 30000
+# Window status
+set -g window-status-separator ""
+set -g window-status-format "#[fg=$BLUE] #I:#W"
+set -g window-status-current-format "#[fg=$RED,bold] #I:#W"
 
-# Start windows and panes at 1 and not 0
+# Messages
+set -g message-style "fg=$BG bg=$BLUE"
+set -g message-command-style "fg=$BG bg=$YELLOW"
+
+# ================================================================
+# PANES - CLEAN BORDERS
+# ================================================================
+
+# Start numbering at 1
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-set-window-option -g mode-keys vi
+# Pane borders - minimal
+set -g pane-border-style "fg=$GRAY"
+set -g pane-active-border-style "fg=$BLUE"
+set -g pane-border-status off
 
-bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
-bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
+# ================================================================
+# COPY MODE - VIM-LIKE
+# ================================================================
 
-unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+set -g mode-style "fg=$BG bg=$BLUE"
+bind-key -T copy-mode-vi 'v' send -X begin-selection 
+bind-key -T copy-mode-vi 'y' send -X copy-selection 
+unbind -T copy-mode-vi MouseDragEnd1Pane 
 
-# Remove delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 10
+# ================================================================
+# KEY BINDINGS - INTUITIVE
+# ================================================================
 
-# keybindings
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+# Reload config
+bind r source-file ~/.tmux.conf \; display " Config reloaded"
 bind-key v run-shell '~/.tmux/plugins/tmux-resurrect/scripts/save.sh' \; display-message "Session saved!"
 
-# Set keys to change window pane
-bind -r j resize-pane -D 5
-bind -r k resize-pane -U 5
-bind -r l resize-pane -R 5
-bind -r h resize-pane -L 5
-
-bind-key -T copy-mode-vi M-h resize-pane -L 1
-bind-key -T copy-mode-vi M-j resize-pane -D 1
-bind-key -T copy-mode-vi M-k resize-pane -U 1
-bind-key -T copy-mode-vi M-l resize-pane -R 1
-
-# Open the new panes in the current path
+# Split panes (intuitive keys)
 bind w split-window -h -c "#{pane_current_path}"
 bind s split-window -v -c "#{pane_current_path}"
 
-# If this is your first time using tmux, you will need to press (Ctrl + Space) + I to fetch the plugins.
+# Navigate panes (vim-like)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+# Resize panes
+bind -r C-h resize-pane -L 2
+bind -r C-j resize-pane -D 2
+bind -r C-k resize-pane -U 2
+bind -r C-l resize-pane -R 2
+
+# Maximize pane
+bind m resize-pane -Z
+
+# Reorder windows
+bind -r C-Left swap-window -t -1\; select-window -t -1
+bind -r C-Right swap-window -t +1\; select-window -t +1
+
+# ================================================================
+# PLUGINS - ESSENTIAL ONLY
+# ================================================================
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'omerxx/tmux-sessionx'
+
+# Plugin settings
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '15'
+
+# Plugin keybinds
+set -g @sessionx-bind 'space'
+
+# Initialize TPM (keep at bottom)
 run '~/.tmux/plugins/tpm/tpm'
