refactor(tmux): reorganize config with sections, update plugins, and enhance theming

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,6 +64,9 @@ set -g status-interval 1
 set -g status-justify left
 set -g status-style "fg=$FG bg=default"
 
+# Left side - minimal indicators
+set -g status-left ""
+
 # Right side - minimal indicators
 set -g status-right-length 100
 set -g status-right "#[fg=$COMMENT]#{?client_prefix,#[fg=$RED bold] ⌨,}#[fg=$MAGENTA,bold] #S"
