refactor(config): modularize i3 config and update themes
- split i3 config into modular conf.d files
- add dunst notification daemon config
- update alacritty font size to 12
- switch kitty font back to jetbrains and increase size to 16
- adjust picom inactive opacity to 0.9
- tweak polybar layout, fonts, and modules
- move lockscreen script to scripts directory

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -13,7 +13,7 @@
 ; TokyoNight color palette
 background =     #1a1b26    
 background-alt = #414868
-foreground =     #fff
+foreground =     #c0caf5
 primary =        #7aa2f7     
 secondary =      #bb9af7    
 alert =          #f7768e         
@@ -29,34 +29,16 @@ radius = 0
 dpi = 96
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
+font-0 = JetBrainsMono Nerd Font:size=12:weight=medium;3
 padding-left = 0
 padding-right = 1
 module-margin = 1
 separator = | 
 separator-foreground = ${colors.disabled}
 
-modules-left = xworkspaces
-modules-center = date
-modules-right = battery pulseaudio brightness 
-
-[bar/bottom]
-monitor = ${env:MONITOR:}
-width = 100%
-height = 36px
-bottom = true
-background = ${colors.background}
-foreground = ${colors.foreground}
-font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;2
-padding-left = 2
-padding-right = 2
-module-margin = 1
-separator = | 
-separator-foreground = ${colors.disabled}
-
-modules-left = temperature filesystem cpu memory 
-modules-center = xwindow
-modules-right = wlan bluetooth 
+modules-left = memory cpu filesystem 
+modules-center = xworkspaces
+modules-right = battery pulseaudio brightness date
 
 [module/systray]
 type = internal/tray
@@ -68,7 +50,7 @@ tray-spacing = 16pt
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.primary}
+label-active-background = ${colors.background-alt}
 label-active-underline= ${colors.primary}
 label-active-padding = 1
 
@@ -78,10 +60,6 @@ label-occupied-padding = 1
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
-
-label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 1
 
 [module/xwindow]
 type = internal/xwindow
@@ -125,6 +103,7 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 1
+# format-prefix = "  "
 format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
@@ -132,7 +111,8 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 1
-format-prefix = ""
+# format-prefix = ""
+format-prefix = "CPU"
 format-prefix-foreground = ${colors.primary}
 label = %percentage:3%%
 
@@ -208,12 +188,12 @@ label-foreground = ${colors.foreground}
 type = internal/date
 interval = 1
 
-; date = %I:%M %p
-date = %a %d-%b %Y  %I:%M %p
+# date = %a %d-%b %Y  %I:%M %p
+date = %d-%m-%Y  %I:%M %p
 date-alt = %I:%M %p
 
 format-foreground = ${colors.secondary}
-format-prefix = "  "
+format-prefix = " "
 ; format-prefix = "  "
 label = %date%
 label-foreground = ${colors.foreground}
@@ -227,7 +207,7 @@ interval = 1
 enable-scroll = true
 scroll-interval = 10
 format-prefix = "󰃠 "
-format-prefix-foreground = ${colors.label}
+format-prefix-foreground = ${colors.primary}
 label = %percentage%%
 
 [module/bluetooth]
