--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,237 +1,1 @@
-# i3 config file (v4)
-
- for_window [class="^.*"] border pixel 3
-
- exec_always --no-startup-id feh --bg-scale /home/ssk/Wallpaper-Bank/sunrise.png
- # set mod key (Mod1=<Alt>, Mod4=<Super>)
-set $mod Mod4
-
-
-
-exec --no-startup-id picom --config ~/.config/picom/picom.conf
-exec --no-startup-id xrdb -merge ~/.Xresources
-#exec_always --no-startup-id setxkbmap -option :nocaps
-exec_always --no-startup-id setxkbmap -option 
-exec --no-startup-id variety --restore
-exec_always --no-startup-id autotiling
-# exec_always --no-startup-id xborders
-
-# kill any hanging polybar processes
-exec_always killall polybar
-exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
-
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-font pango:Jetbrains Nerd Font  Mono 12
-
-# Gaps
-gaps outer 2
-gaps inner 5
-
-# Start XDG autostart .desktop files using dex. See also
-# https://wiki.archlinux.org/index.php/XDG_Autostart
- exec --no-startup-id dex --autostart --environment i3
-
-# monitor configuration
-# exec --no-startup-id xrandr --output eDP-1-1 --off --output HDMI-1-1 --mode 1920x1080
-# # Set gaps only on workspace 2
-# assign [workspace="2"] $ws2
-# gaps inner 20
-# gaps outer 20
-
-# screen before suspend. Use loginctl lock-session to lock your screen. exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-exec --no-startup-id nm-applet
-
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
-
-# Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
-
-# start a terminal
-bindsym $mod+Return exec kitty
-
-# Send the terminal to the scratchpad
-bindsym $mod+Shift+Return move scratchpad
-
-# Show the scratchpad terminal
-bindsym $mod+minus scratchpad show
-bindsym $mod+shift+minus  move workspace current
-
-# kill focused window
-bindsym $mod+q kill
-
-# start rofi (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -show drun
-bindsym $mod+Tab exec --no-startup-id rofi -show window
-bindsym $mod+p exec --no-startup-id ~/.config/rofi/powermenu.sh
-
-# change focus
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
-
-# alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
-
-# move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
-# bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-# bindsym $mod+Shift+Right move right
-
-# enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen toggle
-
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-# focus the parent container
-bindsym $mod+a focus parent
-
-# focus the child container
-# bindsym $mod+d focus child
-
-# Switch to prev/next workspace
-bindsym $mod+slash workspace next
-bindsym $mod+period workspace prev
-
-# Audio controls using pactl
-bindsym F1 exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
-bindsym F2 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym F3 exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
-
-# Brightness controls
-bindsym F4 exec --no-startup-id brightnessctl set 10%-
-bindsym F5 exec --no-startup-id brightnessctl set +10%
-
-# Microphone mute/unmute
-bindsym F9 exec --no-startup-id amixer set Capture toggle
-
-# Screenshot
-bindsym F12 exec scrot  ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-bindsym Shift+F12 exec scrot -u ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-bindsym Ctrl+F12 exec scrot -s ~/Pictures/Screenshots/screenshot_$(date +%Y-%m-%d_%H-%M-%S).png
-
-# split orientation
-bindsym $mod+z split h;exec notify-send 'tile horizontally'
-bindsym $mod+v split v;exec notify-send 'tile vertically'
-
-# toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-bindsym $mod+Shift+Right move window to output right
-bindsym $mod+Shift+Left move window to output left
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-
-# switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
-
-# move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
-
-# reload the configuration file
-bindsym $mod+Shift+c reload
-# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-
-bindsym $mod+r mode "resize"
-
-
-#Lockscript
-bindsym $mod+c exec "~/.config/i3/lockscreen.sh"
-
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-
-# Tokyo Night color scheme
-set $color1 #1a1b26  
-set $color2 #7aa2f7 
-set $color3 #414559
-set $color4 #f7768e
-
-client.focused               $color2 $color2 $color1 $color2 $color2
-client.unfocused             $color3 $color1 $color2 $color1 $color1
-client.focused_inactive      $color1 $color1 $color3 $color1 $color1
-client.urgent                $color4 $color4 $color1 $color4 $color4
+include ~/.config/i3/conf.d/*.conf
