feat: update desktop and editor configurations
- change wallpaper in i3 autostart and enable gaps in output
- refactor i3status with new modules, icons, and formatting
- add notes folder keybind in nvim telescope
- remove copilot chat keymaps from nvim
- disable fading and adjust opacity in picom
- rearrange polybar modules and update formats
- add filebrowser to rofi modi and change terminal to kitty
- update lockscreen script path in rofi powermenu

--- a/.config/i3/conf.d/09-bar.conf
+++ b/.config/i3/conf.d/09-bar.conf
@@ -1,3 +1,8 @@
 # kill any hanging polybar processes
 exec_always killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
+
+# bar {
+#     status_command i3status
+#     tray_output primary
+# }
