--- a/.config/i3/conf.d/10-output.conf
+++ b/.config/i3/conf.d/10-output.conf
@@ -1,6 +1,7 @@
 # monitor configuration
 # exec --no-startup-id xrandr --output eDP-1-1 --off --output HDMI-1-1 --mode 1920x1080
-# # Set gaps only on workspace 2
+# Set gaps only on workspace 2
 # assign [workspace="2"] $ws2
 # gaps inner 20
 # gaps outer 20
+
