--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -36,9 +36,12 @@ module-margin = 1
 separator = | 
 separator-foreground = ${colors.disabled}
 
-modules-left = memory cpu filesystem 
-modules-center = xworkspaces
-modules-right = battery pulseaudio brightness date
+; modules-left = memory cpu filesystem 
+; modules-center = xworkspaces
+; modules-right = battery pulseaudio brightness date
+
+modules-left = xworkspaces
+modules-right = battery filesystem memory date
 
 [module/systray]
 type = internal/tray
@@ -103,8 +106,8 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 1
-# format-prefix = "  "
-format-prefix = "RAM "
+format-prefix = " "
+; format-prefix = "RAM "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
@@ -188,13 +191,12 @@ label-foreground = ${colors.foreground}
 type = internal/date
 interval = 1
 
-# date = %a %d-%b %Y  %I:%M %p
-date = %d-%m-%Y  %I:%M %p
+date = %a, %b %d - %I:%M %p
+; date = %d-%m-%Y  %I:%M %p
 date-alt = %I:%M %p
 
 format-foreground = ${colors.secondary}
 format-prefix = " "
-; format-prefix = "  "
 label = %date%
 label-foreground = ${colors.foreground}
 
