--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -31,7 +31,7 @@ shadow-exclude = [
 #           Fading              #
 #################################
 
-fading = true;
+fading = false;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 
@@ -40,7 +40,7 @@ fade-out-step = 0.03;
 #################################
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
+active-opacity = 1
 inactive-opacity = 0.9;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
