style(config): update desktop theming
- switch lockscreen to tokyonight colors and adjust options
- modify polybar font weight and remove filesystem module
- increase rofi powermenu background opacity
- update powermenu script for betterlockscreen

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -29,7 +29,7 @@ radius = 0
 dpi = 96
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = JetBrainsMono Nerd Font:size=12:weight=medium;3
+font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;3
 padding-left = 0
 padding-right = 1
 module-margin = 1
@@ -41,7 +41,7 @@ separator-foreground = ${colors.disabled}
 ; modules-right = battery pulseaudio brightness date
 
 modules-left = xworkspaces
-modules-right = battery filesystem memory date
+modules-right = battery memory date
 
 [module/systray]
 type = internal/tray
@@ -106,8 +106,8 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 1
-format-prefix = " "
-; format-prefix = "RAM "
+format-prefix = "󰍛 "
+; format-prefix = "mem: "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
