chore: update desktop environment configurations
- refine i3 window manager settings across multiple config files
- adjust nvim keymaps
- modify polybar and i3status configurations
- update wezterm and zsh settings
- remove obsolete zsh welcome script

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,15 +61,15 @@ COMMENT="#565f89"
 set -g status on
 set -g status-position top
 set -g status-interval 1
-set -g status-justify left
+set -g status-justify centre
 set -g status-style "fg=$FG bg=default"
 
 # Left side - minimal indicators
-set -g status-left ""
+set -g status-left-length 100
+set -g status-left "#[fg=$COMMENT]#{?client_prefix,#[fg=$RED bold] ⌨,}#[fg=$MAGENTA,bold] #S"
 
 # Right side - minimal indicators
-set -g status-right-length 100
-set -g status-right "#[fg=$COMMENT]#{?client_prefix,#[fg=$RED bold] ⌨,}#[fg=$MAGENTA,bold] #S"
+set -g status-right ""
 
 # Window status
 set -g window-status-separator ""
