chore: update desktop environment configurations
- refine i3 window manager settings across multiple config files
- adjust nvim keymaps
- modify polybar and i3status configurations
- update wezterm and zsh settings
- remove obsolete zsh welcome script

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -126,6 +126,7 @@ format-prefix-foreground = ${colors.primary}
 full-at = 95
 format-charging = chr: <label-charging>
 format-charging-foreground = ${colors.good}
+label-charging-foreground = ${colors.foreground}
 
 format-discharging = bat: <label-discharging>
 format-discharging-foreground = ${colors.primary}
