chore: update desktop environment configurations
- refine i3 window manager settings across multiple config files
- adjust nvim keymaps
- modify polybar and i3status configurations
- update wezterm and zsh settings
- remove obsolete zsh welcome script

--- a/.config/i3/conf.d/00-core.conf
+++ b/.config/i3/conf.d/00-core.conf
@@ -3,7 +3,7 @@ set $mod Mod4
 
 for_window [class="^.*"] border pixel 3
 
-font pango:Jetbrains Nerd Font Mono 14
+font pango:Jetbrains Nerd Font Mono 16 Semibold
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
