--- a/.config/i3/conf.d/09-bar.conf
+++ b/.config/i3/conf.d/09-bar.conf
@@ -3,6 +3,17 @@ exec_always killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 
 # bar {
+#     position top
 #     status_command i3status
 #     tray_output primary
+#
+#     colors {
+#       background #1a1b26   # bar background
+#         statusline #c0caf5   # i3status text color
+#         separator  #565f89   # separators between modules
+#         focused_workspace  #7aa2f7 #7aa2f7 #1a1b26
+#         active_workspace    #565f89 #565f89 #c0caf5
+#         inactive_workspace #565f89 #1a1b26 #565f89
+#         urgent_workspace    #f7768e #f7768e #1a1b26
+#     }
 # }
