--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -19,6 +19,7 @@ secondary =      #bb9af7
 alert =          #f7768e         
 disabled =       #414868       
 label =          #c0caf5            
+good =           #9ece6a
 transparent =    #00000000   
 
 [bar/top]
@@ -29,7 +30,7 @@ radius = 0
 dpi = 96
 background = ${colors.background}
 foreground = ${colors.foreground}
-font-0 = JetBrainsMono Nerd Font:size=12:weight=bold;3
+font-0 = JetBrainsMono Nerd Font:size=14:weight=bold;3
 padding-left = 0
 padding-right = 1
 module-margin = 1
@@ -41,13 +42,13 @@ separator-foreground = ${colors.disabled}
 ; modules-right = battery pulseaudio brightness date
 
 modules-left = xworkspaces
-modules-right = battery memory date
+modules-right = battery memory date systray
 
 [module/systray]
 type = internal/tray
 
-format-margin = 8pt
-tray-spacing = 16pt
+format-margin = 4pt
+tray-spacing = 10pt
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -106,8 +107,7 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 1
-format-prefix = "󰍛 "
-; format-prefix = "mem: "
+format-prefix = "mem: "
 format-prefix-foreground = ${colors.primary}
 label = %percentage_used:2%%
 
@@ -121,31 +121,23 @@ label = %percentage:3%%
 
 [module/battery]
 type = internal/battery
-format-prefix = "BAT "
+format-prefix = "bat: "
 format-prefix-foreground = ${colors.primary}
-full-at = 99
-format-charging = <animation-charging> <label-charging>
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-framerate = 750
-animation-charging-foreground = ${colors.label}
-format-discharging = <ramp-capacity> <label-discharging>
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-foreground = ${colors.primary}
+full-at = 95
+format-charging = chr: <label-charging>
+format-charging-foreground = ${colors.good}
+
+format-discharging = bat: <label-discharging>
+format-discharging-foreground = ${colors.primary}
+label-discharging-foreground = ${colors.foreground}
+
 low-at = 20
 format-low = <animation-low> <label-low>
-animation-low-0 = 
+animation-low-0 = low:
 animation-low-1 = 
-animation-low-2 = 
+animation-low-2 = low:
 animation-low-3 =
-animation-low-4 = 
+animation-low-4 = low:
 animation-low-framerate = 500
 animation-low-foreground = ${colors.alert}
 battery = BAT1
@@ -196,7 +188,7 @@ date = %a, %b %d - %I:%M %p
 date-alt = %I:%M %p
 
 format-foreground = ${colors.secondary}
-format-prefix = " "
+# format-prefix = " "
 label = %date%
 label-foreground = ${colors.foreground}
 
