--- a/.config/i3/conf.d/06-autostart.conf
+++ b/.config/i3/conf.d/06-autostart.conf
@@ -1,4 +1,4 @@
-exec_always --no-startup-id feh --bg-scale /home/ssk/Wallpaper-Bank/blue_night_person_sky_stars_trees_field.png
+exec_always --no-startup-id feh --bg-scale /home/ssk/Wallpaper-Bank/3--Milad-Fakurian-Abstract-Purple-Blue.jpg
 
 exec --no-startup-id picom --config ~/.config/picom/picom.conf
 exec --no-startup-id xrdb -merge ~/.Xresources
