chore: update desktop environment configurations
- refine i3 window manager settings across multiple config files
- adjust nvim keymaps
- modify polybar and i3status configurations
- update wezterm and zsh settings
- remove obsolete zsh welcome script

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -42,7 +42,7 @@ separator-foreground = ${colors.disabled}
 ; modules-right = battery pulseaudio brightness date
 
 modules-left = xworkspaces
-modules-right = battery memory date systray
+modules-right = battery memory date
 
 [module/systray]
 type = internal/tray
@@ -184,7 +184,7 @@ label-foreground = ${colors.foreground}
 type = internal/date
 interval = 1
 
-date = %a, %b %d - %I:%M %p
+date = %a, %b %d - %I:%M %P
 ; date = %d-%m-%Y  %I:%M %p
 date-alt = %I:%M %p
 
