chore(dotfiles): update configuration files
- adjust ghostty theme settings (opacity, font style, size)
- switch i3 terminal from wezterm to kitty
- add neovim keymaps for copilot and file execution
- enhance polybar battery full format
- tweak tmux status prefix and add copy-mode comments

--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,13 +1,12 @@
 # Theme
 theme = "tokyonight"
-background-opacity = 0.75
-# background-opacity = 1
+background-opacity = 0.9
 
 # Font
 font-family = "JetBrains Mono Nerd Font"
-font-style = semibold
+font-style = Bold
 bold-is-bright = true
-font-size = 14
+font-size = 16
 
 # Appearance
 gtk-titlebar = true
