--- a/.tmux.conf
+++ b/.tmux.conf
@@ -66,7 +66,7 @@ set -g status-style "fg=$FG bg=default"
 
 # Left side - minimal indicators
 set -g status-left-length 100
-set -g status-left "#[fg=$COMMENT]#{?client_prefix,#[fg=$RED bold] ⌨,}#[fg=$MAGENTA,bold] #S"
+set -g status-left "#[fg=$COMMENT]#{?client_prefix,#[fg=$RED bold]*,}#[fg=$MAGENTA,bold]#S"
 
 # Right side - minimal indicators
 set -g status-right ""
@@ -100,8 +100,8 @@ set -g pane-border-status off
 # ================================================================
 
 set -g mode-style "fg=$BG bg=$BLUE"
-bind-key -T copy-mode-vi 'v' send -X begin-selection 
-bind-key -T copy-mode-vi 'y' send -X copy-selection 
+bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
+bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 unbind -T copy-mode-vi MouseDragEnd1Pane 
 
 # ================================================================
