--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -124,6 +124,10 @@ type = internal/battery
 format-prefix = "bat: "
 format-prefix-foreground = ${colors.primary}
 full-at = 95
+format-full = full: <label-full>
+format-full-foreground = ${colors.good}
+label-full-foreground = ${colors.foreground}
+
 format-charging = chr: <label-charging>
 format-charging-foreground = ${colors.good}
 label-charging-foreground = ${colors.foreground}
