config(i3): adjust window borders and setup dual monitor with workspace assignments
- reduce window border to 2 pixels
- configure HDMI-1 as external monitor above eDP-1
- assign workspace 10 to HDMI-1 and workspaces 1,4-8 to eDP-1

--- a/.config/i3/conf.d/10-output.conf
+++ b/.config/i3/conf.d/10-output.conf
@@ -1,7 +1,17 @@
-# monitor configuration
-# exec --no-startup-id xrandr --output eDP-1-1 --off --output HDMI-1-1 --mode 1920x1080
-# Set gaps only on workspace 2
-# assign [workspace="2"] $ws2
-# gaps inner 20
-# gaps outer 20
+# Make sure HDMI-1 is configured first
+exec --no-startup-id xrandr --output HDMI-1 --mode 1920x1080 --above eDP-1 --output eDP-1 --auto
 
+# Assign workspaces to monitors
+# External monitor (HDMI-1)
+workspace 1 output HDMI-1
+
+# Laptop screen (eDP-1) - the rest
+workspace 2 output eDP-1
+workspace 3 output eDP-1
+workspace 4 output eDP-1
+workspace 5 output eDP-1
+workspace 6 output eDP-1
+workspace 7 output eDP-1
+workspace 8 output eDP-1
+workspace 9 output eDP-1
+workspace 10 output eDP-1
