✨ feat: add opencode agent documentation and update keybindings

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -42,7 +42,7 @@ separator-foreground = ${colors.disabled}
 ; modules-right = battery pulseaudio brightness date
 
 modules-left = xworkspaces
-modules-right = battery memory date
+modules-right = battery pulseaudio brightness cpu memory date
 
 [module/systray]
 type = internal/tray
@@ -83,14 +83,14 @@ label-unmounted-foreground = ${colors.disabled}
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "  "
+format-volume-prefix = "vol: "
 format-volume-prefix-foreground = ${colors.primary}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+label-muted = "muted"
+label-muted-foreground = ${colors.alert}
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -115,7 +115,7 @@ label = %percentage_used:2%%
 type = internal/cpu
 interval = 1
 # format-prefix = ""
-format-prefix = "CPU"
+format-prefix = "cpu:"
 format-prefix-foreground = ${colors.primary}
 label = %percentage:3%%
 
@@ -205,7 +205,8 @@ poll-interval = 0
 interval = 1
 enable-scroll = true
 scroll-interval = 10
-format-prefix = "󰃠 "
+# format-prefix = "󰃠 "
+format-prefix = "brt: "
 format-prefix-foreground = ${colors.primary}
 label = %percentage%%
 
