feat: update opencode config and telescope settings
- add no_ignore options to telescope find_files picker
- restructure opencode agent hierarchy (move agents to subagent mode)
- add MCP server configurations (context7, postgres, obsidian, filesystem)
- remove redundant agent documentation files
- format agent descriptions and add missing frontmatter
- add package-lock.json for opencode dependencies

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,7 +12,7 @@ include ~/.config/sway/keybindings/scratchpad
 include ~/.config/sway/keybindings/resizing
 
 # include ~/.config/sway/bar/waybar
-# include ~/.config/sway/bar/swaybar
+include ~/.config/sway/bar/swaybar
 
 include /etc/sway/config.d/*
 
