add bookmarks export and update i3 display layout configuration
- add bookmarks html export file with organized links
- restructure i3 output config with workspace-to-monitor mapping
- change external monitor to workspaces 6-7, laptop to 1-5,9-10

--- a/.config/i3/conf.d/10-output.conf
+++ b/.config/i3/conf.d/10-output.conf
@@ -1,17 +1,25 @@
-# Make sure HDMI-1 is configured first
-exec --no-startup-id xrandr --output HDMI-1 --mode 1920x1080 --above eDP-1 --output eDP-1 --auto
+# ==============================
+# Display layout (xrandr)
+# ==============================
+# External monitor ABOVE laptop
+exec_always --no-startup-id xrandr \
+  --output HDMI-1 --mode 1920x1080 --above eDP-1 \
+  --output eDP-1 --mode 1920x1200 --primary
 
-# Assign workspaces to monitors
+# ==============================
+# Workspace → Output mapping
+# ==============================
+
 # External monitor (HDMI-1)
-workspace 1 output HDMI-1
+workspace 6 output HDMI-1
+workspace 7 output HDMI-1
 
-# Laptop screen (eDP-1) - the rest
+# Laptop screen (eDP-1)
+workspace 1 output eDP-1
 workspace 2 output eDP-1
 workspace 3 output eDP-1
 workspace 4 output eDP-1
 workspace 5 output eDP-1
 workspace 6 output eDP-1
-workspace 7 output eDP-1
-workspace 8 output eDP-1
 workspace 9 output eDP-1
 workspace 10 output eDP-1
