chore(config): update dotfiles configurations
- change i3 wallpaper to ign_sunGarden
- adjust kitty font size, padding, and opacity
- update nvim lazy-lock.json plugins
- modify telescope plugin no_ignore settings
- add obsidian second brain agent config
- update backend-developer agent mode
- tweak opencode.json formatting
- comment out lockscreen code in rofi powermenu
- update sway config, keybindings, outputs, and startup
- comment out waybar backlight and pulseaudio modules
- adjust waybar style background color

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -20,8 +20,8 @@
     "cpu",
     "memory",
     "disk",
-    "backlight",
-    "pulseaudio",
+    // "backlight",
+    // "pulseaudio",
     "battery",
     "custom/power"
   ],
@@ -155,7 +155,8 @@
     "on-click": "swaymsg exec gnome-control-center power"
   },
   "pulseaudio": {
-    "format": "  {volume}%",
+    // "format": "  {volume}%",
+    "format": "vol {volume}%",
     "format-muted": " M",
     "tooltip-format": "{desc}"
   },
