feat: update config files across multiple applications
- add kiro shell integration for fish and zsh
- add noctalia wallpaper toggle keybinding in hyprland
- adjust hyprland visual settings (rounding, blur passes)
- modify kitty background opacity
- update niri terminal from ghostty to kitty
- refresh neovim plugin dependencies
- reconfigure opencode with new providers and settings
- tune sway blur passes and visual effects
- enhance vim transparency settings

--- a/.config/hypr/hyprland/keybindings/basics.conf
+++ b/.config/hypr/hyprland/keybindings/basics.conf
@@ -23,4 +23,5 @@ bind = ctrl, F12, exec, hyprshot -m region -o $HOME/Pictures/Screenshots/
 # Noctalia keybindings
 bind = $mainMod SHIFT, B, exec, qs -c noctalia-shell ipc call bar toggle
 bind = $mainMod, P, exec, qs -c noctalia-shell ipc call sessionMenu toggle
+bind = $mainMod SHIFT, P, exec, qs -c noctalia-shell ipc call wallpaper toggle
 bind = $mainMod, comma, exec, qs -c noctalia-shell ipc call launcher emoji
