--- a/.config/hypr/hyprland/style.conf
+++ b/.config/hypr/hyprland/style.conf
@@ -14,7 +14,7 @@ general {
 
 decoration {
   dim_special = 0.2
-  rounding = 10
+  rounding = 16
   active_opacity = 1
   inactive_opacity = 0.9
 
@@ -28,7 +28,7 @@ decoration {
   blur {
     enabled = true
     size = 5
-    passes = 3
+    passes = 5
   }
 }
 
@@ -65,4 +65,4 @@ misc {
     # Empty for now
 }
 
-windowrulev2 = float,class:*
+# windowrulev2 = float,class:*
