--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,7 +21,7 @@ initial_window_width 640
 initial_window_height 480
 window_padding_width 25
 
-background_opacity 0.75
+background_opacity 0.90
 scrollbar_handle_opacity 0
 scrollbar_track_opacity 0
 scrollbar_track_hover_opacity 0
@@ -33,3 +33,9 @@ map ctrl+equal change_font_size all +1.0
 map ctrl+minus change_font_size all -1.0
 
 include themes/tokyonight.conf
+
+
+# BEGIN_KITTY_THEME
+# Noctalia
+include current-theme.conf
+# END_KITTY_THEME
