Revert "Merge pull request #4 from lukassta/main"
This reverts commit 4304059c1921b91d3449083bf32104094e158e41, reversing
changes made to 76fbcd5bda8907aeb26703ebedc35c79e5d8932a.

--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -21,7 +21,7 @@ print_info() {
     info " " cpu
     info " " gpu
 
-    info " " memory
+    info "󰍛 " memory
     info " " disk
 
     info "󱫐 " uptime
