--- a/.config/waybar/bak/omarch-mod/config.jsonc
+++ b/.config/waybar/bak/omarch-mod/config.jsonc
@@ -146,7 +146,7 @@
   },
   "memory": {
     "interval": 1,
-    "format": " {}%",
+    "format": " {}%",
     "tooltip-format": "{used}/{total} GiB",
     "on-click": "swaymsg exec gnome-system-monitor"
   },
