--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -168,7 +168,7 @@
   },
   "memory": {
     "interval": 1,
-    "format": " {}%",
+    "format": " {}%",
     "tooltip-format": "{used}/{total} GiB",
     "on-click": "swaymsg exec gnome-system-monitor"
   },
