--- a/.tmux.conf
+++ b/.tmux.conf
@@ -144,15 +144,21 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'omerxx/tmux-floax'
 
 # Plugin settings
 set -g @resurrect-strategy-nvim 'session'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 set -g @continuum-save-interval '15'
+set -g @floax-width '80%'
+set -g @floax-height '80%'
+set -g @floax-border-color 'magenta'
+set -g @floax-text-color 'blue'
 
 # Plugin keybinds
 set -g @sessionx-bind 'space'
+set -g @floax-bind 'p'
 
 # Initialize TPM (keep at bottom)
 run '~/.tmux/plugins/tpm/tpm'
