feat(dotfiles): add noctalia theme and apply across alacritty, kitty, sway, tmux
- add alacritty noctalia theme and import in `.config/alacritty/alacritty.toml`
- add kitty theme and set `current-theme.conf`
- add `~/.config/sway/noctalia`, include it in sway config, and update swaybar colors
- increase sway blur settings and tweak tmux binding (`@floax-bind` 'p' → 't')

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -41,8 +41,4 @@ command = { program = "paplay", args = ["/usr/share/sounds/freedesktop/stereo/di
 
 live_config_reload = true
 
-import = ["~/.config/alacritty/themes/tokyonight.toml", "~/.config/alacritty/fonts.toml"]
-
-# [shell]
-# program = "/bin/bash"
-# args = ["-l", "-c", "tmux"]
+import = ["~/.config/alacritty/themes/tokyonight.toml", "~/.config/alacritty/fonts.toml",  "~/.config/alacritty/themes/noctalia.toml"]
