--- a/.tmux.conf
+++ b/.tmux.conf
@@ -158,7 +158,7 @@ set -g @floax-text-color 'blue'
 
 # Plugin keybinds
 set -g @sessionx-bind 'space'
-set -g @floax-bind 'p'
+set -g @floax-bind 't'
 
 # Initialize TPM (keep at bottom)
 run '~/.tmux/plugins/tpm/tpm'
