--- a/.config/sway/config
+++ b/.config/sway/config
@@ -18,3 +18,6 @@ include /etc/sway/config.d/*
 
 # exec_always swaybg -i /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1366x768.png -m fill
 
+
+include ~/.config/sway/noctalia
+
